# VocesODS2030

./: .nojekyll  README.md  ai-log.md  pyproject.toml
dashboard/: _quarto.yml  custom.scss  index.qmd  index.quarto_ipynb_1  index.quarto_ipynb_2  index.quarto_ipynb_3  index.quarto_ipynb_4
