[project]
name = "hackods-vocesods2030"
version = "0.1.0"
description = "El Cerebro Vulnerable: Índice de Vulnerabilidad Neuroeducativa (IVN) para el monitoreo de los ODS 3 y 4 en México"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]
